# nichiji_trend

./: .gitignore  CLAUDE.md  README.md
20260527/: readme.md
20260527/mcp-toolbox-server/: README.md  client_demo.py  pyproject.toml
20260527/mcp-toolbox-server/mcp_toolbox/: __init__.py  server.py  tools.py
20260528/: readme.md
20260528/mlkem-hybrid-vault/: .gitignore  README.md  go.mod  main.go
20260529/: readme.md
20260529/subagent-orchestrator-ts/: README.md  package-lock.json  package.json  tsconfig.json
20260530/: readme.md
20260530/rust-subagent-swarm/: Cargo.toml  README.md
20260530/rust-subagent-swarm/src/: agent.rs  lib.rs  llm.rs  main.rs  memory.rs  orchestrator.rs  plan.rs  tools.rs
20260530/rust-subagent-swarm/tests/: integration.rs
20260531/: readme.md
20260531/rrf-hybrid-search/: Cargo.toml  README.md
20260531/rrf-hybrid-search/src/: bm25.rs  lib.rs  main.rs  rrf.rs  tokenize.rs  vector.rs
20260531/rrf-hybrid-search/tests/: integration.rs
20260601/: readme.md
20260601/gguf-inspector/: Cargo.toml  README.md
20260601/gguf-inspector/src/: fixture.rs  gguf.rs  lib.rs  main.rs  report.rs  types.rs
20260601/gguf-inspector/tests/: roundtrip.rs
20260602/: readme.md
20260602/multi-agent-supervisor/: README.md  package-lock.json  package.json  tsconfig.json
20260603/: readme.md
20260603/a2a-agent-mesh/: README.md  package.json  tsconfig.json
20260604/: readme.md
20260604/wasm-edge-infer/: README.md  package.json
20260605/: readme.md
20260605/webmcp-task-board/: README.md  index.html  package.json  server.js
20260606/: readme.md
20260606/skillsmith/: .gitignore  README.md  package-lock.json  (+2 more)
20260607/: readme.md
20260608/: readme.md
20260609/: readme.md
20260610/: readme.md
20260611/: readme.md
20260612/: readme.md
20260613/: readme.md
(+158 files in other folders)
